--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-idle-timer": "^5.4.1",
+    "react-player": "^2.12.0",
     "react-rating-stars-component": "^2.2.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-simple-star-rating": "^5.1.0",
+    "react-slick": "^0.29.0",
     "serve": "^14.0.1",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4",
     "workbox-background-sync": "^6.5.3",
